--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "logger_helper"
+name = "log_helper"
 version = "0.0.1"
 authors = [
   { name="Erol Yesin", email="erol@sandboxzilla.net" },
@@ -22,5 +22,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/sandboxzilla/logger_helper"
-"Bug Tracker" = "https://https://github.com/sandboxzilla/logger_helper/issues"
+"Homepage" = "https://github.com/sandboxzilla/log_helper"
+"Bug Tracker" = "https://https://github.com/sandboxzilla/log_helper/issues"
