changwed the name once again.  This one was acceptable

--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,4 +1,4 @@
-home = /usr/bin
+home = .venv/bin
 include-system-site-packages = false
 version = 3.10.7
-prompt = 'log-helper'
+prompt = 'logger-wrapper'
