--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "log_helper"
+name = "logger_wrapper"
 version = "0.0.1"
 authors = [
   { name="Erol Yesin", email="erol@sandboxzilla.net" },
@@ -11,7 +11,7 @@ authors = [
 description = "The package wraps the built-in logger.  There are options to track the code location from where the log message was created."
 readme = "README.md"
 requires-python = ">=3.10"
-keywords=["logger", "syslog", "location"]
+keywords=["logger", "logging", "syslog", "location", "formating"]
 classifiers = [
     'Development Status :: 4 - Beta',
     'Intended Audience :: Developers',
@@ -22,5 +22,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/sandboxzilla/log_helper"
-"Bug Tracker" = "https://https://github.com/sandboxzilla/log_helper/issues"
+"Homepage" = "https://github.com/sandboxzilla/logger-wrapper"
+"Bug Tracker" = "https://https://github.com/sandboxzilla/logger-wrapper/issues"
