--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,20 +4,20 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "logger_wrapper"
-version = "0.0.1"
+version = "0.1.0"
 authors = [
   { name="Erol Yesin", email="erol@sandboxzilla.net" },
 ]
-description = "The package wraps the built-in logger.  There are options to track the code location from where the log message was created."
+description = "The package wraps the built-in Logger package.  There are options to track from where the log message was created."
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 keywords=["logger", "logging", "syslog", "location", "formating"]
 classifiers = [
     'Development Status :: 4 - Beta',
     'Intended Audience :: Developers',
     'Topic :: Software Development :: Build Tools',
     'License :: OSI Approved :: MIT License',
-    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
     "Operating System :: OS Independent",
 ]
 
